[tool.poetry]
name = "pycc"
version = "0.1.0"
description = ""
authors = ["Delian Delchev <delian.delchev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ply = "^3.11"
llvmlite = "^0.43.0"

[tool.poetry.scripts]
run = "pycc:main"
parse = "pycc:main"
cc = "cc:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
